<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="192dp"
        android:layout_height="84dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/clinic"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pets"
        android:layout_width="164dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/my_pets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/bolezni"
        android:layout_width="164dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/bolezni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pets" />

    <Button
        android:id="@+id/zooshop"
        android:layout_width="164dp"
        android:layout_height="80dp"
        android:text="Зоомагазин"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="204dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/bolezni"/>


</androidx.constraintlayout.widget.ConstraintLayout>